--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "hono": "^4.6.18",
-    "ofetch": "^1.4.1",
-    "zod": "^3.24.1"
+    "ofetch": "^1.4.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
