--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.6.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "hono": "^4.6.18",
-    "ofetch": "^1.4.1"
+    "ofetch": "^1.4.1",
+    "vitest": "^3.0.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
