--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "centmv",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
+    "deploy": "wrangler deploy --minify",
+    "test": "bun test test/units/*.test.ts"
   },
   "dependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.9",
